# webnovel-writing

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt
dashboard/: app.py  server.py
scripts/: migrate_state.py  novel-writer.py
src/: __init__.py  main.py
src/agents/: base.py  context_agent.py  data_agent.py  logic_checker.py
src/agents/checkers/: __init__.py  consistency_checker.py  continuity_checker.py  high_point_checker.py  ooc_checker.py  pacing_checker.py  reader_pull_checker.py  world_rules_checker.py
src/data/: auto_audit.py  causal_chain.py  character_arc_tracker.py  hybrid_rag.py  long_term_memory.py  plot_thread_tracker.py  rag_adapter.py  reading_power.py  schemas.py  state_machine.py  state_manager.py  world_rules.py
src/init/: __init__.py  project.py
src/llm/: __init__.py  base.py  ollama.py  openai_llm.py  qwen.py
src/plan/: auto_outline.py  outline_checker.py  volume_planner.py
src/utils/: anti_ai_scanner.py  config.py  file_ops.py  gender_pronoun_scanner.py  git_ops.py  logging.py  performance.py
src/workflow/: __init__.py  manager.py
tests/: conftest.py  test_character_data_flow.py  test_gender_pronoun_scanner.py  test_install.py
tests/test_checkers/: __init__.py  test_consistency_checker.py  test_continuity_checker.py
tests/test_data/: test_reading_power.py
我的小说/: .env.example
